k8s/01_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
    istio-discovery: enabled
    istio-injection: enabled
  name: llm-playground
