k8s/deployment-llm-playground.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: llm-playground
    app.kubernetes.io/component: llm-playground
    app.kubernetes.io/instance: llm-playground
    app.kubernetes.io/name: llm-playground
    app.kubernetes.io/part-of: llm-playground
    app.openshift.io/runtime: nodejs
  name: llm-playground
  namespace: llm-playground
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: llm-playground
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: llm-playground
        deployment: llm-playground
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/llm-playground/llm-playground:latest
        imagePullPolicy: Always
        name: llm-playground
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
