k8s/deployment-llm-pol-mon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app: llm-policy-monitor
    app.kubernetes.io/component: llm-policy-monitor
    app.kubernetes.io/instance: llm-policy-monitor
    app.kubernetes.io/name: llm-policy-monitor
    app.kubernetes.io/part-of: llm-playground
    app.openshift.io/runtime: python
  name: llm-policy-monitor
  namespace: llm-playground
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: llm-policy-monitor
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: llm-policy-monitor
        deployment: llm-policy-monitor
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/llm-playground/llm-policy-monitor:latest
        imagePullPolicy: Always
        name: llm-policy-monitor
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      serviceAccountName: limitador-monitor
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
