k8s/service-llm-playground.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: llm-playground
    app.kubernetes.io/component: llm-playground
    app.kubernetes.io/instance: llm-playground
    app.kubernetes.io/name: llm-playground
    app.kubernetes.io/part-of: llm-playground
  name: llm-playground
  namespace: llm-playground
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: llm-playground
    deployment: llm-playground
